--- a/index.html
+++ b/index.html
@@ -6,13 +6,10 @@
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
     <meta charset="utf-8">
 
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <script type="text/javascript" src="js/bootstrap.min.js"></script>
     <base target="_blank">
 
     <title>My Porfolio Site</title>
     <link href='http://fonts.googleapis.com/css?family=Lato:100,300' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="css/jquery-2.1.4.min.css" />
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/style.css" />
     <!--<link rel="stylesheet" href="http://weloveiconfonts.com/api/?family=zocial"/>-->
@@ -20,7 +17,7 @@
 
   <body>
     <div class="container-fluid">
-      <div class="row page-header">
+      <header class="row">
         <div class="col-xs-4">
           <img class="logo" src="./images/Udacity.jpg" alt="Logo image">
         </div>
@@ -28,7 +25,7 @@
           <h1>Jane Doette</h1>
           <h2>Front-end Ninja</h2>
         </div>
-      </div>
+      </header>
       <div class="row">
         <div class="col-md-12">
           <picture>
@@ -85,5 +82,8 @@
       </div>
     </div>
 
-</body>
+    <script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
+    <script type="text/javascript" src="js/bootstrap.min.js"></script>
+
+  </body>
 </html>
